sql/item.h
@@ -3103,6 +3103,7 @@ public:
   void cleanup()
   {
     null_ref_table= NULL;
+    item_equal= NULL;
     Item_direct_ref::cleanup();
   }
 };
